asm_tests/other_testfiles/invalid_files/error40.s
.name "MORO"
.comment "MORJESTA!"

and %12, r2, %12
